--- a/webapp-uploader/package.json
+++ b/webapp-uploader/package.json
@@ -7,15 +7,22 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.20",
     "env-cmd": "^10.1.0",
+    "on-build-webpack": "^0.1.0",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-complex-tree": "^2.4.6",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "clear-assets": "rm -rf ../omero_boost/static/omero_boost/assets/*",
+    "watch": "yarn clear-assets && webpack --mode=development --color --progress -w",
     "start": "react-scripts start",
-    "build": "env-cmd -f .env react-scripts build",
+    "build": "yarn clear-assets && webpack --mode=production --color --progress",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +43,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^9.2.1",
+    "file-loader": "^6.2.0",
+    "postcss-loader": "^8.1.1",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-shell-plugin-next": "^2.3.2"
   }
 }
