--- a/webapp-uploader/package.json
+++ b/webapp-uploader/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "env-cmd": "^10.1.0",
     "on-build-webpack": "^0.1.0",
     "postcss": "^8.4.49",
