refactor: update FileTree component to use BlueprintJS and improve styling

--- a/webapp-uploader/package.json
+++ b/webapp-uploader/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^5.15.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
