--- a/webapp-uploader/package.json
+++ b/webapp-uploader/package.json
@@ -21,10 +21,11 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.15",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "rimraf": "^6.0.1"
   },
   "scripts": {
-    "clear-assets": "rm -rf ../omero_boost/static/omero_boost/assets/*",
+    "clear-assets": "rimraf ../omero_boost/static/omero_boost/assets",
     "watch": "yarn clear-assets && webpack --mode=development --color --progress -w",
     "start": "react-scripts start",
     "build": "yarn clear-assets && webpack --mode=production --color --progress",
@@ -56,9 +57,11 @@
     "babel-loader": "^9.2.1",
     "file-loader": "^6.2.0",
     "postcss-loader": "^8.1.1",
+    "rimraf": "^6.0.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-shell-plugin-next": "^2.3.2"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
