--- a/biomero/package.json
+++ b/biomero/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "react-icons": "^5.4.0"
   },
   "scripts": {
     "clear-assets": "rimraf ../omero_boost/static/biomero/assets",
