--- a/canvas/package.json
+++ b/canvas/package.json
@@ -19,11 +19,12 @@
     "react": "^18.3.1",
     "react-complex-tree": "^2.4.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.15",
-    "web-vitals": "^2.1.0",
     "rimraf": "^6.0.1",
-    "react-icons": "^5.4.0"
+    "tailwindcss": "^3.4.15",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "clear-assets": "rimraf ../omero_boost/static/omero_boost/assets",
