Add active group to web api import, instead of default

--- a/omero_boost/group_mappings.json
+++ b/omero_boost/group_mappings.json
@@ -1,1 +1,14 @@
-{}
+{
+  "0": {
+    "folder": "Project A",
+    "groupName": "system"
+  },
+  "3": {
+    "folder": "root",
+    "groupName": "demo"
+  },
+  "53": {
+    "folder": "Project A/Dataset",
+    "groupName": "torectest"
+  }
+}
