--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 __pycache__
-omero_boost.egg-info
+omero_biomero.egg-info
 node_modules
-omero_boost/group_mappings.json
+omero_biomero/group_mappings.json
